Change image sources in index.html
Updated image URLs for various sections of the text.

--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
                 title: "Marley era morto",
                 text: "Marley era morto, tanto per cominciare. Su questo non c'è dubbio. Il registro della sua sepoltura era stato firmato dal sacerdote, dal chierico, dall'impresario di pompe funebri e da chi aveva condotto il lutto. Scrooge l'aveva firmato: e il nome di Scrooge era buono alla Borsa per qualunque cosa cui gli piacesse mettere mano. Il vecchio Marley era morto come un chiodo di porta.\n\nScrooge sapeva che era morto? Certo che lo sapeva. Come avrebbe potuto essere altrimenti? Scrooge e lui erano stati soci per non so quanti anni. Scrooge era il suo unico esecutore testamentario, il suo unico amministratore, il suo unico cessionario, il suo unico erede residuario, il suo unico amico e l'unico a portare il lutto.",
                 quote: "Marley era morto come un chiodo di porta.",
-                image: "https://commons.wikimedia.org/wiki/Special:FilePath/Marley's_Ghost_-_A_Christmas_Carol_(1843),_opposite_25_-_BL.jpg?width=600",
+                image: "https://commons.wikimedia.org/wiki/Special:FilePath/Charles_Dickens-A_Christmas_Carol-Title_page-First_edition_1843.jpg?width=600",
                 song: "God Rest Ye Merry Gentlemen",
                 artist: "Bing Crosby",
                 deezerId: "799630102"
@@ -521,7 +521,7 @@
                 title: "Bah! Sciocchezze!",
                 text: "«Buon Natale, zio! Dio vi benedica!» esclamò una voce allegra. Era la voce del nipote di Scrooge, che gli piombò addosso così rapidamente che fu il primo avvertimento che ebbe del suo avvicinarsi.\n\n«Bah!» disse Scrooge. «Sciocchezze!»\n\nIl nipote di Scrooge si era tanto riscaldato nella sua rapida camminata nella nebbia e nel gelo, che era tutto acceso in viso; aveva il volto come una ciliegia, gli occhi scintillanti e il fiato fumante.\n\n«Natale una sciocchezza, zio!» disse il nipote di Scrooge. «Non lo pensate certo sul serio!»\n\n«Invece sì», disse Scrooge. «Buon Natale! Che diritto hai tu di essere allegro? Che ragione hai tu di essere allegro? Sei abbastanza povero.»",
                 quote: "Bah! Sciocchezze!",
-                image: "https://commons.wikimedia.org/wiki/Special:FilePath/Marley's_Ghost_-_A_Christmas_Carol_(1843),_opposite_25_-_BL.jpg?width=600",
+                image: "https://commons.wikimedia.org/wiki/Special:FilePath/A_Christmas_Carol_-_Scrooge_and_Bob_Cratchit.jpg?width=600",
                 song: "Deck the Halls",
                 artist: "Nat King Cole",
                 deezerId: "1559079802"
@@ -532,7 +532,7 @@
                 title: "Che cosa è il Natale?",
                 text: "A queste parole entrarono nel tetro ufficio di Scrooge due signori di aspetto piacevole, con in mano carte e libri, che si tolsero il cappello.\n\n«Scrooge e Marley, credo», disse uno dei signori, consultando la sua lista. «Ho il piacere di parlare col signor Scrooge o col signor Marley?»\n\n«Il signor Marley è morto da sette anni», rispose Scrooge. «Morì sette anni fa, proprio questa notte.»\n\n«In questa stagione festiva, signor Scrooge», disse il signore, prendendo una penna, «è più che mai desiderabile che si faccia qualche piccolo provvedimento per i poveri e i bisognosi, che soffrono molto in questi tempi. Molte migliaia mancano delle cose più necessarie.»\n\n«Non ci sono prigioni?» chiese Scrooge.",
                 quote: "Non ci sono prigioni? E gli ospizi dei poveri?",
-                image: "https://commons.wikimedia.org/wiki/Special:FilePath/Ghost_of_Christmas_Present_John_Leech_1843.jpg?width=600",
+                image: "https://commons.wikimedia.org/wiki/Special:FilePath/A_Christmas_Carol_-_Scrooge_and_Bob_Cratchit.jpg?width=600",
                 song: "O Come All Ye Faithful",
                 artist: "Frank Sinatra",
                 deezerId: "6409675"
@@ -543,7 +543,7 @@
                 title: "Il battente della porta",
                 text: "Ora, è un fatto che nel battente della porta non c'era assolutamente nulla di particolare, tranne che era molto grande. È anche un fatto che Scrooge l'aveva visto, mattina e sera, per tutto il tempo che aveva abitato in quella casa; e che Scrooge aveva poca di quella cosa che si chiama fantasia, quanto qualsiasi altro uomo della City di Londra.\n\nEppure, quando Scrooge mise la chiave nella serratura della porta, vide nel battente, senza che avesse subito alcuna trasformazione intermedia — non un battente, ma il volto di Marley.\n\nIl volto di Marley. Non era avvolto in un'ombra impenetrabile come gli altri oggetti nel cortile, ma aveva una luce sinistra intorno a sé, come un'aragosta guasta in una cantina buia.",
                 quote: "Vide nel battente — non un battente, ma il volto di Marley.",
-                image: "https://commons.wikimedia.org/wiki/Special:FilePath/Marley%27s_Ghost_-_A_Christmas_Carol_(1843),_opposite_25_-_BL.jpg?width=600",
+                image: "https://commons.wikimedia.org/wiki/Special:FilePath/A_Christmas_Carol_Marley%27s_Ghost_by_John_Leech.jpg?width=600",
                 song: "Carol of the Bells",
                 artist: "Pentatonix",
                 deezerId: "780043492"
@@ -565,7 +565,7 @@
                 title: "I tre Spiriti",
                 text: "«Ascoltatemi!» gridò il Fantasma. «Il mio tempo è quasi finito.»\n\n«Ascolterò», disse Scrooge. «Ma non siate duro con me! Non parlate in modo fiorito, Jacob! Vi prego!»\n\n«Come sia accaduto che io appaia davanti a voi in una forma che potete vedere, non posso dirvelo. Ho seduto invisibile accanto a voi per molti e molti giorni.»\n\nNon era un pensiero piacevole. Scrooge rabbrividì e si asciugò il sudore dalla fronte.\n\n«Sarete perseguitato», riprese il Fantasma, «da Tre Spiriti.»\n\nIl volto di Scrooge cadde quasi quanto quello del Fantasma aveva fatto.\n\n«È questa la possibilità e la speranza di cui parlaste, Jacob?» chiese con voce tremante.",
                 quote: "Sarete perseguitato da Tre Spiriti.",
-                image: "https://commons.wikimedia.org/wiki/Special:FilePath/Marley%27s_Ghost_-_A_Christmas_Carol_(1843),_opposite_25_-_BL.jpg?width=600",
+                image: "https://commons.wikimedia.org/wiki/Special:FilePath/A_Christmas_Carol_-_Ghosts_of_Departed_Usurers.jpg?width=600",
                 song: "O Holy Night",
                 artist: "Nat King Cole",
                 deezerId: "4228133"
@@ -644,8 +644,7 @@
                 title: "Le strade di Londra",
                 text: "Ma presto le campane chiamarono le buone persone tutte in chiesa e cappella, e via andarono, riversandosi per le strade nei loro abiti migliori, e con i loro volti più lieti. E nello stesso tempo emersero da decine di strade laterali, vicoli e svolte senza nome, innumerevoli persone, che portavano i loro pranzi ai forni dei fornai.\n\nLa vista di questi poveri festaioli sembrò interessare molto lo Spirito, perché stette con Scrooge accanto alla porta di una panetteria, e sollevando i coperchi mentre i portatori passavano, spruzzò incenso sui loro pranzi dalla sua torcia. Ed era una torcia molto insolita, perché una o due volte quando ci furono parole arrabbiate tra alcune persone che si erano urtate, sparse su di loro alcune gocce d'acqua dalla sua torcia, e il loro buon umore fu ristabilito all'istante.",
                 quote: "Lo Spirito sparse gocce dalla sua torcia, e il buon umore fu ristabilito.",
-                image: "https://commons.wikimedia.org/wiki/Special:FilePath/Ghost_of_Christmas_Present_John_Leech_1843.jpg?width=600",
-                song: "It's the Most Wonderful Time of the Year",
+                image: "https://commons.wikimedia.org/wiki/Special:FilePath/A_Christmas_Carol_The_Second_of_The_Three_Spirits_by_John_Leech.jpg?width=600",
                 artist: "Andy Williams",
                 deezerId: "71732211"
             },
@@ -655,8 +654,7 @@
                 title: "Casa Cratchit",
                 text: "Allora la signora Cratchit entrò — arrossita, ma sorridente orgogliosa — con il budino, simile a una palla di cannone maculata, così duro e fermo, che ardeva nel mezzo bicchiere di cognac acceso, e ornato con agrifoglio di Natale conficcato nella cima.\n\nOh, che budino meraviglioso! Bob Cratchit disse, e disse con calma anche, che lo considerava il più grande successo raggiunto dalla signora Cratchit da quando si erano sposati.\n\nLa signora Cratchit disse che ora che il peso le era stato tolto dalla mente, avrebbe confessato di aver avuto i suoi dubbi sulla quantità di farina. Tutti avevano qualcosa da dire su di esso, ma nessuno disse o pensò che fosse affatto un budino piccolo per una famiglia così grande.",
                 quote: "Il budino ardeva nel mezzo bicchiere di cognac acceso.",
-                image: "https://commons.wikimedia.org/wiki/Special:FilePath/Ghost_of_Christmas_Present_John_Leech_1843.jpg?width=600",
-                song: "The Christmas Song",
+                image: "https://commons.wikimedia.org/wiki/Special:FilePath/Christmas_Dinner_at_the_Cratchit%27s.jpg?width=600",
                 artist: "Nat King Cole",
                 deezerId: "4228128"
             },
@@ -666,8 +664,7 @@
                 title: "Tiny Tim",
                 text: "Ed entrò il piccolo Bob, il padre, con almeno tre piedi di comforter escludendo le frange, che gli pendeva davanti; e i suoi abiti lisi e rattoppati, per renderli eleganti a buon mercato. E Bob aveva Tiny Tim in spalla. Ahimè per Tiny Tim, portava una piccola stampella e le sue membra sostenute da una staffa di ferro!\n\n«E come si è comportato il piccolo Tim?» chiese la signora Cratchit, dopo aver deriso Bob per la sua credulità, e Bob aveva abbracciato la figlia a suo agio.\n\n«Buono come l'oro», disse Bob, «e meglio. In qualche modo diventa pensieroso stando così tanto solo, e pensa le cose più strane che tu abbia mai sentito. Mi ha detto, tornando a casa, che sperava che la gente lo vedesse in chiesa, perché era uno storpio, e potrebbe essere piacevole per loro ricordare nel giorno di Natale, Chi fece camminare gli zoppi e vedere i ciechi.»",
                 quote: "Dio ci benedica, tutti quanti!",
-                image: "https://commons.wikimedia.org/wiki/Special:FilePath/Ghost_of_Christmas_Present_John_Leech_1843.jpg?width=600",
-                song: "O Little Town of Bethlehem",
+                image: "https://commons.wikimedia.org/wiki/Special:FilePath/A_Christmas_Carol_-_Scrooge_and_Bob_Cratchit.jpg?width=600",
                 artist: "Frank Sinatra",
                 deezerId: "6409681"
             },
@@ -700,8 +697,7 @@
                 title: "Il Fantasma silenzioso",
                 text: "Il Fantasma si avvicinò lentamente, gravemente, silenziosamente. Quando venne vicino a lui, Scrooge si piegò sul ginocchio; perché nell'aria stessa attraverso cui questo Spirito si muoveva sembrava diffondere oscurità e mistero.\n\nEra avvolto in un indumento profondo nero, che nascondeva la sua testa, il suo volto, la sua forma, e non lasciava nulla di visibile tranne una mano tesa. Se non fosse stato per questo sarebbe stato difficile distinguere la sua figura dalla notte e separarla dall'oscurità da cui era circondata.\n\nSentì che era alto e maestoso, e che la sua presenza misteriosa lo riempiva di un solenne terrore. Non sapeva altro, perché lo Spirito non parlava né si muoveva.",
                 quote: "Lo Spirito non parlava né si muoveva.",
-                image: "https://commons.wikimedia.org/wiki/Special:FilePath/The_Last_of_the_Spirits-John_Leech,_1843.jpg?width=600",
-                song: "In the Bleak Midwinter",
+                image: "https://commons.wikimedia.org/wiki/Special:FilePath/A_Christmas_Carol_-_Ghosts_of_Departed_Usurers.jpg?width=600",
                 artist: "Bing Crosby",
                 deezerId: "3399690"
             },
