Fix HTML syntax and update quotes

--- a/index.html
+++ b/index.html
@@ -879,6 +879,7 @@ text: `<p>Scrooge pareva turbato assai e rispose breve: "Sì."
 <br>- Niente - rispose Scrooge.
 <br>- Eppure - insistette lo Spirito - qualche cosa c’è.
 <br>- No - disse Scrooge - no. Soltanto vorrei poter dire una o due parole al mio commesso. Ecco. </p>`,
+                quote: "Sono venuta a portarti a casa, caro fratello!",
                 image: "img/10.jpg",
                 song: "Jingle Bells",
                 artist: "Frank Sinatra",
@@ -1077,7 +1078,7 @@ text: `<p>Sedeva sul suo sgabelletto, proprio accosto al padre. Bob gli teneva l
 </p><p>Eretto sopra un banco di roccie basse, una lega all’incirca dalla riva, contro le quali rompevansi le acque per quanto lungo era l’anno, stava solitario un faro. Aderivano alla base enormi viluppi di alghe, e gli uccelli della tempesta - partoriti forse dal vento come l’alga del mare - vi svolazzavano intorno alzandosi e abbassandosi come le onde che sfioravano con l’ala.
 </p><p>Ma anche qui, due guardiani aveano acceso un loro fuoco, e questo traverso alla feritoia del muro massiccio mandava un raggio lucente sulle tenebre del mare. Strigendosi le mani callose di sopra alla rozza tavola e al loro boccale di ponce, si davano l’un l’altro il buon Natale; e il più vecchio dei due, dalla faccia accarnata e cicatrizzata dalle intemperie come una di quelle teste scolpite che sporgono dalla prua di una vecchia nave, intuonò una selvaggia canzone che poteva parere una raffica.
 </p><p>E lo Spirito andava, andava sempre sulle onde cupe e anelanti, fino a che, lontani da ogni riva, com’ei disse a Scrooge, raccolsero il volo sopra un bastimento. Qua il pilota alla sua ruota, lassù nella gabbia la vedetta, più in là gli ufficiali di quarto: figure fantasticamente immobili: ma ciascuno di loro canticchiava una canzone di Natale, o pensava a Natale, o di qualche passato Natale parlava basso al compagno con soavi speranze di ritorno. E ciascuno a bordo, desto o dormiente, buono o malvagio, aveva avuto per l’altro una parola più gentile che in qualunque altro giorno dell’anno; avea partecipato in una certa misura alla festa; avea ricordato i cari lontani, pensando con dolcezza al loro memore affetto.</p>`,
-                quote: "Vedo una sedia vuota e una stampella senza padrone."
+                quote: "Vedo una sedia vuota e una stampella senza padrone.",
                 image: "img/15.jpg",
                 song: "O Little Town of Bethlehem",
                 artist: "Frank Sinatra",
