--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
                 </div>
 
                 <div class="music-section">
-                    <h3>🎵 Ascolta la strofa</h3>
+                    <h3>🎵 Ascolta la musica</h3>
                     <iframe id="deezer-player" class="deezer-player" scrolling="no" frameborder="0" allowTransparency="true" src="" width="100%" height="130"></iframe>
                 </div>
             </div>
