--- a/index.html
+++ b/index.html
@@ -1068,180 +1068,183 @@ text: `<p>Scrooge non se lo fece dire due volte e vi si tenne saldo.
             }
         ];
 
-      // ═══════════════════════════════════════════════════════════════════════
-    // FUNZIONI
-    // ═══════════════════════════════════════════════════════════════════════
+  // ═══════════════════════════════════════════════════════════════════════
+// FUNZIONI
+// ═══════════════════════════════════════════════════════════════════════
 
-    // GENERA I FIOCCHI DI NEVE
-    function createSnowflakes() {
-        const container = document.getElementById('snowflakes');
-        const snowChars = ['❄', '❅', '❆', '✻', '✼', '❋'];
+// GENERA I FIOCCHI DI NEVE
+function createSnowflakes() {
+    const container = document.getElementById('snowflakes');
+    const snowChars = ['❄', '❅', '❆', '✻', '✼', '❋'];
 
-        for (let i = 0; i < 50; i++) {
-            const snowflake = document.createElement('div');
-            snowflake.className = 'snowflake';
-            snowflake.textContent = snowChars[Math.floor(Math.random() * snowChars.length)];
-            snowflake.style.left = Math.random() * 100 + '%';
-            snowflake.style.fontSize = (Math.random() * 1 + 0.5) + 'rem';
-            snowflake.style.animationDuration = (Math.random() * 10 + 10) + 's';
-            snowflake.style.animationDelay = (Math.random() * 10) + 's';
-            snowflake.style.opacity = Math.random() * 0.6 + 0.2;
-            container.appendChild(snowflake);
-        }
+    for (let i = 0; i < 50; i++) {
+        const snowflake = document.createElement('div');
+        snowflake.className = 'snowflake';
+        snowflake.textContent = snowChars[Math.floor(Math.random() * snowChars.length)];
+        snowflake.style.left = Math.random() * 100 + '%';
+        snowflake.style.fontSize = (Math.random() * 1 + 0.5) + 'rem';
+        snowflake.style.animationDuration = (Math.random() * 10 + 10) + 's';
+        snowflake.style.animationDelay = (Math.random() * 10) + 's';
+        snowflake.style.opacity = Math.random() * 0.6 + 0.2;
+        container.appendChild(snowflake);
+    }
+}
+
+// ═══════════════════════════════════════════════════════════════════════
+// 1) CONTROLLA SE UN GIORNO È SBLOCCATO (Con Giorno 1 sempre aperto)
+// ═══════════════════════════════════════════════════════════════════════
+function isDayUnlocked(day) {
+    // ECCEZIONE: Il Giorno 1 è sempre sbloccato, indipendentemente dalla data odierna
+    if (day === 1) {
+        return true;
     }
 
-    // ═══════════════════════════════════════════════════════════════════════
-    // CONTROLLA SE UN GIORNO È SBLOCCATO
+    // Logica standard: sblocca il giorno corrente e i giorni passati di Dicembre.
+    const today = new Date();
+    const currentYear = today.getFullYear();
+
+    // Determina l'anno dell'Avvento
+    let adventYear = currentYear;
+
+    // Crea la data del giorno dell'avvento (1-25 dicembre)
+    const dayDate = new Date(adventYear, 11, day); // Mese 11 = Dicembre
+
+    // Ritorna TRUE solo se oggi è >= la data del giorno
+    return today >= dayDate;
+}
+
+// CONTROLLA SE È OGGI
+function isToday(day) {
+    const today = new Date();
+    // Usa il mese 11 (Dicembre) e confronta il giorno
+    return today.getMonth() === 11 && today.getDate() === day;
+}
+
+// GENERA IL CALENDARIO
+function generateCalendar() {
+    const calendar = document.getElementById('calendar');
+
+    adventData.forEach(item => {
+        const dayBox = document.createElement('div');
+        dayBox.className = 'day-box';
+        dayBox.dataset.day = item.day;
+
+        const unlocked = isDayUnlocked(item.day);
+        const today = isToday(item.day);
+
+        if (!unlocked) {
+            dayBox.classList.add('locked');
+        } else {
+            if (localStorage.getItem(`advent_day_${item.day}`)) {
+                dayBox.classList.add('opened');
+            }
+            if (today) {
+                dayBox.classList.add('today');
+            }
+            // Aggiunge l'event listener solo per i giorni sbloccati
+            dayBox.addEventListener('click', () => openDay(item.day));
+        }
+
+        dayBox.innerHTML = `
+            <span class="day-number">${item.day}</span>
+            <span class="day-title">${item.title}</span>
+        `;
+
+        calendar.appendChild(dayBox);
+    });
+}
+
+// APRI UN GIORNO (Funzione Asincrona per il caricamento del file)
+async function openDay(day) {
+    const data = adventData.find(d => d.day === day);
+    if (!data) return;
+
+    // Blocco di sicurezza per i giorni futuri
+    if (!isDayUnlocked(day)) {
+        // Animazione opzionale per il giorno bloccato (richiede il CSS .shake)
+        const dayBox = document.querySelector(`.day-box[data-day="${day}"]`);
+        dayBox.classList.add('shake');
+        setTimeout(() => dayBox.classList.remove('shake'), 500);
+        return;
+    }
+
+    // Segna il giorno come aperto e aggiorna la classe
+    localStorage.setItem(`advent_day_${day}`, 'true');
+    document.querySelector(`.day-box[data-day="${day}"]`).classList.add('opened');
+
+    // Popola le informazioni statiche
+    document.getElementById('modal-stave').textContent = data.stave;
+    document.getElementById('modal-title').textContent = `"${data.title}"`;
+    document.getElementById('modal-day').textContent = `Giorno ${day}`;
+
+    const storyTextDiv = document.getElementById('modal-text');
+    // Mostra un messaggio di caricamento
+    storyTextDiv.innerHTML = '<p>Caricamento storia...</p>';
+
+    // CARICAMENTO DEL CONTENUTO HTML DAL FILE ESTERNO (FETCH)
+    try {
+        // data.text contiene il percorso del file (es. storia/giorno_1.html)
+        const response = await fetch(data.text);
+
+        if (!response.ok) {
+            throw new Error(`Impossibile caricare il file: ${response.status} ${response.statusText}`);
+        }
+
+        const storyContent = await response.text();
+        // Inserisce il contenuto HTML del file nel modal
+        storyTextDiv.innerHTML = storyContent;
+
+    } catch (error) {
+        console.error('Errore durante il caricamento della storia:', error);
+        storyTextDiv.innerHTML = `<p style="color: red;">⚠️ Errore nel caricamento della storia. Riprova più tardi. Verificare il percorso <code>${data.text}</code></p>`;
+    }
+    // FINE CARICAMENTO FILE
+
+    // Popola il resto delle informazioni statiche
+    document.getElementById('modal-quote').textContent = data.quote;
+    document.getElementById('modal-image').src = data.image;
+    document.getElementById('modal-image').alt = data.title;
+
     // ───────────────────────────────────────────────────────────────────────
-    // 1) SBLOCCA SOLO IL GIORNO CORRENTE E I GIORNI PASSATI
-    // ═══════════════════════════════════════════════════════════════════════
-    function isDayUnlocked(day) {
-        // Blocca i giorni futuri. Sblocca solo il giorno corrente e i giorni passati di Dicembre.
-        const today = new Date();
-        const currentYear = today.getFullYear();
+    // 2) AGGIORNA IL PERCORSO DEI FILES AUDIO
+    // ───────────────────────────────────────────────────────────────────────
+    const audioPlayer = document.getElementById('audio-player');
+    const audioBaseUrl = 'https://symphonyguide.gt.tc/audio/';
+    // Imposta la nuova sorgente, e.g., https://symphonyguide.gt.tc/audio/1.mp3
+    audioPlayer.src = `${audioBaseUrl}${data.day}.mp3`;
+    audioPlayer.load();
 
-        // Determina l'anno dell'Avvento (si assume l'anno corrente)
-        let adventYear = currentYear;
+    const deezerUrl = `https://widget.deezer.com/widget/dark/track/${data.deezerId}?tracklist=false`;
+    document.getElementById('deezer-player').src = deezerUrl;
 
-        // Crea la data del giorno dell'avvento (1-25 dicembre)
-        // Mese 11 = Dicembre
-        const dayDate = new Date(adventYear, 11, day);
+    document.getElementById('modal').classList.add('active');
+    document.body.style.overflow = 'hidden';
+}
 
-        // Ritorna TRUE solo se oggi è >= la data del giorno
-        return today >= dayDate;
-    }
+// CHIUDI IL MODAL
+function closeModal() {
+    document.getElementById('modal').classList.remove('active');
+    document.body.style.overflow = '';
+    document.getElementById('deezer-player').src = '';
 
-    // CONTROLLA SE È OGGI
-    function isToday(day) {
-        const today = new Date();
-        return today.getMonth() === 11 && today.getDate() === day;
-    }
+    const audioPlayer = document.getElementById('audio-player');
+    audioPlayer.pause();
+    audioPlayer.src = '';
+}
 
-    // GENERA IL CALENDARIO
-    function generateCalendar() {
-        const calendar = document.getElementById('calendar');
+document.getElementById('modal').addEventListener('click', (e) => {
+    if (e.target.id === 'modal') closeModal();
+});
 
-        adventData.forEach(item => {
-            const dayBox = document.createElement('div');
-            dayBox.className = 'day-box';
-            dayBox.dataset.day = item.day;
+document.addEventListener('keydown', (e) => {
+    if (e.key === 'Escape') closeModal();
+});
 
-            const unlocked = isDayUnlocked(item.day);
-            const today = isToday(item.day);
-
-            if (!unlocked) {
-                dayBox.classList.add('locked');
-            } else {
-                if (localStorage.getItem(`advent_day_${item.day}`)) {
-                    dayBox.classList.add('opened');
-                }
-                if (today) {
-                    dayBox.classList.add('today');
-                }
-                // Aggiunge l'event listener solo per i giorni sbloccati
-                dayBox.addEventListener('click', () => openDay(item.day));
-            }
-
-            dayBox.innerHTML = `
-                <span class="day-number">${item.day}</span>
-                <span class="day-title">${item.title}</span>
-            `;
-
-            calendar.appendChild(dayBox);
-        });
-    }
-
-    // APRI UN GIORNO (Funzione Asincrona)
-    async function openDay(day) {
-        const data = adventData.find(d => d.day === day);
-        if (!data) return;
-
-        // Blocco di sicurezza per i giorni futuri
-        if (!isDayUnlocked(day)) {
-            // Animazione opzionale per il giorno bloccato
-            const dayBox = document.querySelector(`.day-box[data-day="${day}"]`);
-            dayBox.classList.add('shake');
-            setTimeout(() => dayBox.classList.remove('shake'), 500);
-            return;
-        }
-
-        // Segna il giorno come aperto nel localStorage e aggiorna la classe
-        localStorage.setItem(`advent_day_${day}`, 'true');
-        document.querySelector(`.day-box[data-day="${day}"]`).classList.add('opened');
-
-        // Popola le informazioni statiche
-        document.getElementById('modal-stave').textContent = data.stave;
-        document.getElementById('modal-title').textContent = `"${data.title}"`;
-        document.getElementById('modal-day').textContent = `Giorno ${day}`;
-
-        const storyTextDiv = document.getElementById('modal-text');
-        // Mostra un messaggio di caricamento
-        storyTextDiv.innerHTML = '<p>Caricamento storia...</p>';
-
-        // CARICAMENTO DEL CONTENUTO HTML DAL FILE ESTERNO (FETCH)
-        try {
-            // data.text contiene il percorso del file (es. storia/giorno_1.html)
-            const response = await fetch(data.text);
-
-            if (!response.ok) {
-                throw new Error(`Impossibile caricare il file: ${response.status} ${response.statusText}`);
-            }
-
-            const storyContent = await response.text();
-            // Inserisce il contenuto HTML del file nel modal
-            storyTextDiv.innerHTML = storyContent;
-
-        } catch (error) {
-            console.error('Errore durante il caricamento della storia:', error);
-            storyTextDiv.innerHTML = `<p style="color: red;">⚠️ Errore nel caricamento della storia. Riprova più tardi. Verificare il percorso <code>${data.text}</code></p>`;
-        }
-        // FINE CARICAMENTO FILE
-
-        // Popola il resto delle informazioni statiche
-        document.getElementById('modal-quote').textContent = data.quote;
-        document.getElementById('modal-image').src = data.image;
-        document.getElementById('modal-image').alt = data.title;
-
-        // ───────────────────────────────────────────────────────────────────────
-        // 2) AGGIORNA IL PERCORSO DEI FILES AUDIO
-        // ───────────────────────────────────────────────────────────────────────
-        const audioPlayer = document.getElementById('audio-player');
-        const audioBaseUrl = 'https://symphonyguide.gt.tc/audio/';
-        // Imposta la nuova sorgente: https://symphonyguide.gt.tc/audio/1.mp3, ecc.
-        audioPlayer.src = `${audioBaseUrl}${data.day}.mp3`; 
-        audioPlayer.load();
-
-        const deezerUrl = `https://widget.deezer.com/widget/dark/track/${data.deezerId}?tracklist=false`;
-        document.getElementById('deezer-player').src = deezerUrl;
-
-        document.getElementById('modal').classList.add('active');
-        document.body.style.overflow = 'hidden';
-    }
-
-    // CHIUDI IL MODAL
-    function closeModal() {
-        document.getElementById('modal').classList.remove('active');
-        document.body.style.overflow = '';
-        document.getElementById('deezer-player').src = '';
-
-        const audioPlayer = document.getElementById('audio-player');
-        audioPlayer.pause();
-        audioPlayer.src = '';
-    }
-
-    document.getElementById('modal').addEventListener('click', (e) => {
-        if (e.target.id === 'modal') closeModal();
-    });
-
-    document.addEventListener('keydown', (e) => {
-        if (e.key === 'Escape') closeModal();
-    });
-
-    // INIZIALIZZA
-    document.addEventListener('DOMContentLoaded', () => {
-        createSnowflakes();
-        generateCalendar();
-    });
+// INIZIALIZZA
+document.addEventListener('DOMContentLoaded', () => {
+    createSnowflakes();
+    generateCalendar();
+});
 </script>
 </body>
 </html>
