Fix formatting issues in index.html

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 </p>`,
                 quote: "Il vecchio Marley era morto come un chiodo di porta.",
                 image: "img/1.jpg",
-                driveId: "1j9UPVNnvVIohGutXa_aL3l0dO9N3kd6E"
+                driveId: "1j9UPVNnvVIohGutXa_aL3l0dO9N3kd6E",
                 song: "God Rest Ye Merry Gentlemen",
                 artist: "Bing Crosby",
                 deezerId: "3228534"
